akvcam 1.2.7:

- Use sizeof(self->v4l2_dev.name) instead of V4L2_DEVICE_NAME_SIZE (issue #83).
- Use CLEAN=true instead of CLEAN="make clean" in dkms.conf.
- Force the removal of the module when uninstalling.

akvcam 1.2.6:

- Minimum supported kernel version: 4.19.
- Fix v6.8 renamed symbols (Thanks to @iam-TJ).

akvcam 1.2.5:

- Fixed missing V4L2_DEVICE_NAME_SIZE variable in Linux version > 6.7.

akvcam 1.2.4:

- Minimum supported kernel version: 4.14.
- Remove deprecated REMAKE_INITRD (Thanks to dkadioglu).
- Minimum number of buffers decreased to 2 (issue #20).
- Added makeself as a new install option.

akvcam 1.2.3:

- Set v4l2_buffer.type after memset() (Thanks to Hirosam1).

akvcam 1.2.2:

- Properly mark installer as a GNU/Linux only installer.

akvcam 1.2.1:

- Fixed 'Swap Read and Blue' control.
- Switched top build system from Qmake to Cmake, you can still use make
  command to build the module.
- Removed the global_deleter, and all global objects, objects now have a well
  defined lifetime.
- Removed dangerous static non-constant variables, this should make the module
  a bit more stable.

akvcam 1.2.0:

- Added support for linux 5.10.
- Use V4L2 kernel APIs for dealing with almost anything, v4l2 protocol is too
  much complicated to be handled manually.
- Added DMABUF support.
- RW devices can also have controls too.
- Removed a bunch of useless code.

akvcam 1.1.1:

- Minimum supported kernel version: 4.4
- Maximum tested kernel version: 5.9
- Install the module to /usr/src when running make install.
- Added USE_DKMS for make install to install the module using DKMS.
- Replaced spin_lock with mutex_lock_interruptible.
- Don't stop streaming if the released node is not the node that started the
  streaming.
- Print ioctl error messages.
- Print the device that's calling the node and ioctl functions.
- Added installer and daily build.

akvcam 1.1.0:

- Make it work with linux 5.7.
- Allow setting the device number.
- Added virtual camera usage example.