@@ -1,5 +1,5 @@
 PACKAGE_NAME="akvcam"
-PACKAGE_VERSION="1.2.7"
+PACKAGE_VERSION="1.3.0"
 
 MAKE[0]="make KERNEL_DIR=${kernel_source_dir} all"
 CLEAN=true
