@@ -1,3 +1,8 @@
+akvcam 1.3.0:
+
+- Added /proc/akvcaminfo to read information about the supported input and
+  output pixel formats.
+
 akvcam 1.2.7:
 
 - Use sizeof(self->v4l2_dev.name) instead of V4L2_DEVICE_NAME_SIZE (issue #83).
